Updated to current

--- a/src/data/locales/ru/translation.json
+++ b/src/data/locales/ru/translation.json
@@ -13,24 +13,15 @@
   },
   "aboutMe": {
     "title": "Обо мне",
-    "paragraph_one": "Привет, я Алла, Frontend разработчик из Москвы. Интересуюсь разработкой и всем, что с ней связано.",
-    "paragraph_two": "Я учусь на курсах Front-end разработки в IT-INCUBATOR.",
+    "paragraph_one": "Привет, я Алла, frontend разработчик из Москвы. Интересуюсь разработкой и всем, что с ней связано.",
+    "paragraph_two": "Frontend-разработчица с опытом создания SPA и SSR более года, работаю с TypeScript, React, Redux и Next.js.",
     "paragraph_three": "Готова реализовать отличные проекты с замечательными людьми."
   },
   "skills": {
-    "title": "Навыки",
-    "code": "С помощью HTML я могу структурировать контент и создавать семантическую структуру, что делает веб-страницы более доступными и понятными для поисковых систем и пользователей.",
-    "css": "С помощью CSS я могу создавать уникальные и интерактивные дизайны, которые улучшают пользовательский опыт.",
-    "react": "Я разрабатываю динамичные и отзывчивые пользовательские интерфейсы с помощью React. Эта библиотека позволяет мне создавать мощные и гибкие веб-приложения, которые легко масштабируются.",
-    "typescript": "Использую TypeScript для добавления статической типизации к JavaScript, что делает мой код более надежным и легким для понимания. TypeScript помогает мне избегать ошибок и улучшать качество разработки.",
-    "styledComponents": "С помощью Styled Components я стилизую компоненты в React, что позволяет мне писать CSS внутри JavaScript. Это делает мою работу более интуитивной и управляемой, обеспечивая единый стиль для всего приложения.",
-    "figma": "Figma позволяет мне эффективно сотрудничать с дизайнерами, получать точные спецификации и реализовывать их в коде, делая процесс разработки более продуктивным и точным."
+    "title": "Навыки"
   },
   "portfolio": {
-    "title": "Портфолио",
-    "progectName1": "Online fashion store - Домашня страница",
-    "progectName2": "Reebok Store - Концепт",
-    "progectName3": "Braun Landing Page - Концепт"
+    "title": "Портфолио"
   },
   "contacts": {
     "title": "Контакты",
